Added title and dynamic breadcrumb to components

--- a/pages/docs/components/avatar.mdx
+++ b/pages/docs/components/avatar.mdx
@@ -2,6 +2,11 @@ import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 
 import { NestedLayout } from '@/components/layout/NestedLayout';
 
+export const meta = {
+  name: 'Avatar',
+  title: 'Avatar | Lazydev ui components',
+};
+
 export const getStaticProps = async ({ locale }) => {
   return {
     props: {
@@ -12,4 +17,8 @@ export const getStaticProps = async ({ locale }) => {
 
 # This a component page
 
-export default ({ children }) => <NestedLayout>{children}</NestedLayout>;
+export default ({ children }) => (
+  <NestedLayout name={meta.name} title={meta.title}>
+    {children}
+  </NestedLayout>
+);
