--- a/pages/docs/components/alert.mdx
+++ b/pages/docs/components/alert.mdx
@@ -2,6 +2,11 @@ import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 
 import { NestedLayout } from '@/components/layout/NestedLayout';
 
+export const meta = {
+  name: 'Alert',
+  title: 'Alert | Lazydev ui components',
+};
+
 export const getStaticProps = async ({ locale }) => {
   return {
     props: {
@@ -10,6 +15,11 @@ export const getStaticProps = async ({ locale }) => {
   };
 };
 
-# This a component page
+<div className="h-screen"></div>
 
-export default ({ children }) => <NestedLayout>{children}</NestedLayout>;
+export default ({ children }) => (
+  <NestedLayout name={meta.name} title={meta.title}>
+    {children}
+  </NestedLayout>
+);
+
