--- a/pages/docs/components/tag-input.mdx
+++ b/pages/docs/components/tag-input.mdx
@@ -18,7 +18,7 @@ export const getStaticProps = async ({ locale }) => {
 };
 
 
-<PrevAndNext leftPath="/docs/theme" rightPath="/docs/components/alert" />
+<PrevAndNext leftPath="/docs/components/card" rightPath="#!" />
 
 <ComponentExample name="Default" paragraph="This is a paragraph">
 
