--- a/pages/docs/theme/index.mdx
+++ b/pages/docs/theme/index.mdx
@@ -1,6 +1,7 @@
 import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 
 import { NestedLayout } from '@/components/layout/NestedLayout';
+import { PrevAndNext } from '@/components/layout/PrevAndNext';
 
 export const meta = {
   name: 'Colors',
@@ -14,6 +15,8 @@ export const getStaticProps = async ({ locale }) => {
     },
   };
 };
+
+<PrevAndNext leftPath="/docs/guide" rightPath="/docs/components/button" />
 
 <div className="h-screen"></div>
 
