--- a/pages/docs/components/input.mdx
+++ b/pages/docs/components/input.mdx
@@ -1,7 +1,14 @@
 import { serverSideTranslations } from 'next-i18next/serverSideTranslations';
 
+import ComponentExample from '@/components/layout/ComponentExample';
+import { Code } from '@/components/layout/Code';
+import { SidebarLink } from '@/components/layout/SidebarLink';
 import { NestedLayout } from '@/components/layout/NestedLayout';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
+
+import { Default } from '@/components/docs/components/input/Default';
+import { Label } from '@/components/docs/components/input/Label';
+import { Icon } from '@/components/docs/components/input/Icon';
 
 export const meta = {
   name: 'Input',
@@ -16,9 +23,128 @@ export const getStaticProps = async ({ locale }) => {
   };
 };
 
-<PrevAndNext leftPath="/docs/components/loading" rightPath="/docs/components/select" />
+<SidebarLink>
+  <a href="#default" className="text-right">
+    Default
+  </a>
+  <a href="#default2" className="text-right">
+    Default B
+  </a>
+  <a href="#glassmorphism" className="text-right">
+    Glassmorphism
+  </a>
+  <a href="#withButton" className="text-right">
+    With button
+  </a>
+</SidebarLink>
 
-<div className="h-screen"></div>
+<PrevAndNext
+  leftPath="/docs/components/loading"
+  rightPath="/docs/components/select"
+/>
+
+<div id="default"></div>
+
+<ComponentExample
+  name="Default"
+  paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
+  <Default />
+</ComponentExample>
+
+<Code>
+```jsx
+import React from 'react';
+
+export const Default = () => {
+  return (
+    <>
+      <input
+        className="rounded-xl w-[20rem] md:w-[25rem] bg-gray-200 dark:bg-[#141417] outline-none py-3 px-4 text-xs focus:px-6 duration-200"
+        type="text"
+        placeholder="Default input"
+      />
+    </>
+  );
+};
+```
+</Code>
+
+<ComponentExample
+  name="Label Placeholder"
+  paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
+  <Label />
+</ComponentExample>
+
+<Code>
+```jsx
+import React from 'react';
+
+export const Label = () => {
+  return (
+    <div className="relative group">
+      <label
+        className="absolute top-0 left-0 w-full h-full flex items-center pl-[10px] duration-200 text-sm group-focus-within:text-xs group-focus-within:h-1/2 group-focus-within:-translate-y-full group-focus-within:pl-0"
+        htmlFor="label">
+        Label
+      </label>
+      <input
+        id="label"
+        className="rounded-xl w-[20rem] md:w-[25rem] bg-gray-200 dark:bg-[#141417] outline-none py-3 px-4 text-xs"
+        type="text"
+      />
+    </div>
+  );
+};
+
+````
+</Code>
+
+<ComponentExample
+  name="Icon"
+  paragraph="Ranglar va ikonkalar ixtiyoriy! O'zingizga ma'qul rangni qo'llashingiz mumkin. Kodni olmoqchi bo'sangiz Show code tugmasini bosing">
+  <Icon />
+</ComponentExample>
+
+<Code>
+```jsx
+import React from 'react';
+import { BiUser, BiLockOpenAlt } from 'react-icons/bi';
+export const Icon = () => {
+  return (
+    <div className='grid grid-cols-2 items-center space-x-2'>
+      <div className="relative group">
+        <div className="flex items-center rounded-xl bg-gray-200 dark:bg-[#141417]">
+          <input
+            id="icon"
+            className="outline-none flex flex-grow p-3 bg-transparent rounded-l-xl px-4 text-xs duration-300"
+            type="text"
+            placeholder="username"
+          />
+          <div className="absolute top-0 right-0 duration-300 rounded-xl bg-transparent p-3 group-focus-within:-top-2 group-focus-within:-right-2 group-focus-within:bg-[#18191c]">
+            <BiUser className="text-primary dark:text-white group-focus-within:text-white" />
+          </div>
+        </div>
+      </div>
+      <div className="relative group">
+        <div className="flex items-center rounded-xl bg-gray-200 dark:bg-[#141417]">
+          <input
+            id="icon"
+            className="outline-none flex flex-grow p-3 bg-transparent rounded-l-xl px-4 text-xs duration-300"
+            type="text"
+            placeholder="password"
+          />
+          <div className="absolute top-0 right-0 duration-300 rounded-xl bg-transparent p-3 group-focus-within:-top-2 group-focus-within:-right-2 group-focus-within:bg-[#18191c]">
+            <BiLockOpenAlt className="text-primary dark:text-white group-focus-within:text-white" />
+          </div>
+        </div>
+      </div>
+    </div>
+  );
+};
+
+````
+
+</Code>
 
 export default ({ children }) => (
   <NestedLayout name={meta.name} title={meta.title}>
@@ -26,3 +152,6 @@ export default ({ children }) => (
   </NestedLayout>
 );
 
+```
+
+```
