Added some avatar components

--- a/pages/docs/components/alert.mdx
+++ b/pages/docs/components/alert.mdx
@@ -175,18 +175,18 @@ import { MdOutlineDone, MdClose } from 'react-icons/md';
 export const Icon = () => {
   return (
     <>
-      <div className="p-4 rounded-lg bg-white shadow-lg dark:bg-[#102a43] w-[20rem] md:w-[25rem] my-2">
+      <div className="p-4 rounded-lg bg-white shadow-lg w-[20rem] md:w-[25rem] my-2">
         <div className="flex items-center justify-between">
           <div className="flex items-center">
             <div className="w-7 h-7 flex items-center justify-center rounded-full mr-3">
               <MdOutlineDone className="" text-green-500 />
             </div>
-            <h4 className="text-gray-700 dark:text-white font-semibold">
+            <h4 className="text-gray-700 font-semibold">
               Uploaded Successful
             </h4>
           </div>
           <div>
-            <MdClose className="text-gray-700 dark:text-white text-lg" />
+            <MdClose className="text-gray-700 text-lg" />
           </div>
         </div>
         <div>
@@ -215,7 +215,7 @@ export const Icon = () => {
     Icon={RiErrorWarningLine}
     iconColor="red-500"
     buttonText="Try again"
-    buttonStyle="btn bg-[#ff4757] dark:bg-[#ff4757] text-xs md:text-sm text-white hover:drop-shadow-2xl hover:-translate-y-1"
+    buttonStyle="btn bg-[#ff4757] text-xs md:text-sm text-white hover:drop-shadow-2xl hover:-translate-y-1"
     text="Something went wrong"
     paragraph="... do not uploaded"
   />
@@ -229,18 +229,18 @@ import { MdOutlineDone, MdClose } from 'react-icons/md';
 export const IconWithButton = () => {
   return (
     <>
-      <div className="p-4 rounded-lg bg-white shadow-lg dark:bg-[#102a43] w-[20rem] md:w-[25rem] my-2">
+      <div className="p-4 rounded-lg bg-white shadow-lg w-[20rem] md:w-[25rem] my-2">
         <div className="flex items-center justify-between">
           <div className="flex items-center">
             <div className="w-7 h-7 flex items-center justify-center rounded-full mr-3">
               <MdOutlineDone className="" text-green-500 />
             </div>
-            <h4 className="text-gray-700 dark:text-white font-semibold">
+            <h4 className="text-gray-700 font-semibold">
               Uploaded Successful
             </h4>
           </div>
           <div>
-            <MdClose className="text-gray-700 dark:text-white text-lg" />
+            <MdClose className="text-gray-700 text-lg" />
           </div>
         </div>
         <div>
